delete unused settings

--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -14,7 +14,7 @@ user: http
 limit-request-body: 16777216
 
 access-log:
-  path: "| $H2O_ROOT/share/h2o/setuidgid http cat -"
+  path: "| $H2O_ROOT/share/h2o/setuidgid http cat"
   format: "%v %h %{remote}p \"%r\" %s %b %{duration}x \"%{user-agent}i\" \"%{referer}i\""
 
 file.custom-handler:
@@ -71,11 +71,3 @@ hosts:
         redirect:
           status: 301
           url: "https://www.chabu.jp/2011/07/17/rewrite/"
-      "/2011/09/050-plus-sip.html":
-        redirect:
-          status: 301
-          url: "https://www.chabu.jp/2011/10/01/050-plus-sip/"
-      "/2011/10/050-plus-windows-sip.html":
-        redirect:
-          status: 301
-          url: "https://www.chabu.jp/2011/10/01/050-plus-sip/"
