--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -18,7 +18,6 @@ access-log:
   format: "%v %h %{remote}p \"%r\" %s %b %{duration}x \"%{user-agent}i\" \"%{referer}i\""
 
 file.custom-handler:
-  header.set: "Cache-Control: no-transform, no-store"
   extension: .cgi
   fastcgi.spawn:
     user: nobody
@@ -31,19 +30,19 @@ file.mime.addtypes:
 header.unset: "Last-Modified"
 header.unset: "If-Modified-Since"
 
+header.set: "Cache-Control: private, no-store, no-transform"
 header.set: "Content-Security-Policy: default-src 'self'"
 header.set: "X-Frame-Options: DENY"
 header.set: "X-Robots-Tag: noindex, noarchive, nosnippet, noodp, notranslate, noimageindex"
-header.set: "X-XSS-Protection: 0"
 
 hosts:
   default:
     paths:
       "/":
+        header.unset: "Cache-Control"
         header.unset: "Content-Security-Policy"
         header.unset: "X-Frame-Options"
         header.unset: "X-Robots-Tag"
-        header.unset: "X-XSS-Protection"
         mruby.handler-file: /usr/local/etc/h2o/default.rb
   "www.chabu.jp:80":
     paths:
@@ -52,7 +51,7 @@ hosts:
           status: 301
           url: "https://www.chabu.jp/"
   "www.chabu.jp:443":
-    header.set: "Cache-Control: no-transform"
+    header.set: "Cache-Control: public, no-transform"
     header.set: "Strict-Transport-Security: max-age=15724800"
     paths:
       "/":
