--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -5,7 +5,7 @@ listen:
   port: 443
   ssl:
     min-version: TLSv1.2
-    cipher-suite: "ECDHE:!SSLv3:!CAMELLIA:!AES256"
+    cipher-suite: "ECDHE:!CAMELLIA:!AES256"
     key-file: /srv/certs/www.chabu.jp.key
     certificate-file: /srv/certs/www.chabu.jp.crt
     ocsp-update-interval: 43200
@@ -26,6 +26,8 @@ file.custom-handler:
 file.mime.addtypes:
   "audio/wav": ".wav"
   "text/plain; charset=utf-8": ".txt"
+
+#stash:
 
 header.unset: "Last-Modified"
 header.unset: "If-Modified-Since"
