use stash directive

--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -17,7 +17,16 @@ access-log:
   path: "| $H2O_ROOT/share/h2o/setuidgid http cat"
   format: "%v %h %{remote}p \"%r\" %s %b %{duration}x \"%{user-agent}i\" \"%{referer}i\""
 
+stash:
+  public: &public
+    header.set: "Cache-Control: public, no-transform"
+    mruby.handler-file: /usr/local/etc/h2o/headers.rb
+  private: &private
+    header.set: "Cache-Control: private, no-store, no-transform"
+    header.set: "X-Robots-Tag: noindex, noarchive, nosnippet, noodp, notranslate, noimageindex"
+
 file.custom-handler:
+  <<: *private
   extension: .cgi
   fastcgi.spawn:
     user: nobody
@@ -27,25 +36,17 @@ file.mime.addtypes:
   "audio/wav": ".wav"
   "text/plain; charset=utf-8": ".txt"
 
-#stash:
-
 header.unset: "Last-Modified"
 header.unset: "If-Modified-Since"
-
-header.set: "Cache-Control: private, no-store, no-transform"
-header.set: "Content-Security-Policy: default-src 'self'"
-header.set: "X-Frame-Options: DENY"
-header.set: "X-Robots-Tag: noindex, noarchive, nosnippet, noodp, notranslate, noimageindex"
 
 hosts:
   default:
     paths:
       "/":
-        header.unset: "Cache-Control"
-        header.unset: "Content-Security-Policy"
-        header.unset: "X-Frame-Options"
-        header.unset: "X-Robots-Tag"
         mruby.handler-file: /usr/local/etc/h2o/default.rb
+      "/useful":
+        <<: *private
+        file.dir: /path/to/stash
   "www.chabu.jp:80":
     paths:
       "/":
@@ -53,16 +54,15 @@ hosts:
           status: 301
           url: "https://www.chabu.jp/"
   "www.chabu.jp:443":
-    header.set: "Cache-Control: public, no-transform"
     header.set: "Strict-Transport-Security: max-age=15724800"
+    header.set: "X-Frame-Options: DENY"
     paths:
       "/":
-        header.unset: "X-Robots-Tag"
-        mruby.handler-file: /usr/local/etc/h2o/headers.rb
+        <<: *public
+        header.set: "Content-Security-Policy: default-src 'self'"
         file.dir: /srv/http/www.chabu.jp
       "/misc":
-        header.unset: "Content-Security-Policy"
-        mruby.handler-file: /usr/local/etc/h2o/headers.rb
+        <<: *public
         file.dir: /srv/http/www.chabu.jp/misc
       "/2011/07/rewrite.html":
         redirect:
