--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -18,10 +18,10 @@ access-log:
   format: "%v %h %{remote}p \"%r\" %s %b %{duration}x \"%{user-agent}i\" \"%{referer}i\""
 
 stash:
-  public: &public
+  a: &public
     header.set: "Cache-Control: public, no-transform"
     mruby.handler-file: /usr/local/etc/h2o/headers.rb
-  private: &private
+  b: &private
     header.set: "Cache-Control: private, no-store, no-transform"
     header.set: "X-Robots-Tag: noindex, noarchive, nosnippet, noodp, notranslate, noimageindex"
 
@@ -39,6 +39,9 @@ file.mime.addtypes:
 header.unset: "Last-Modified"
 header.unset: "If-Modified-Since"
 
+header.set: "X-Frame-Options: DENY"
+header.set: "Strict-Transport-Security: max-age=15724800"
+
 hosts:
   default:
     paths:
@@ -54,8 +57,6 @@ hosts:
           status: 301
           url: "https://www.chabu.jp/"
   "www.chabu.jp:443":
-    header.set: "Strict-Transport-Security: max-age=15724800"
-    header.set: "X-Frame-Options: DENY"
     paths:
       "/":
         <<: *public
