--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -50,6 +50,12 @@ hosts:
       "/useful":
         <<: *private
         file.dir: /path/to/stash
+  "chabu.jp":
+    paths:
+      "/":
+        redirect:
+          status: 301
+          url: "https://www.chabu.jp/"
   "www.chabu.jp:80":
     paths:
       "/":
