--- a/systemd/logind.conf
+++ b/systemd/logind.conf
@@ -14,7 +14,7 @@
 [Login]
 #NAutoVTs=6
 #ReserveVT=6
-KillUserProcesses=no
+#KillUserProcesses=no
 #KillOnlyUsers=
 #KillExcludeUsers=root
 #InhibitDelayMaxSec=5
@@ -22,11 +22,12 @@ HandlePowerKey=poweroff
 HandleSuspendKey=ignore
 HandleHibernateKey=ignore
 HandleLidSwitch=ignore
+HandleLidSwitchExternalPower=ignore
 HandleLidSwitchDocked=ignore
-PowerKeyIgnoreInhibited=yes
-SuspendKeyIgnoreInhibited=yes
-HibernateKeyIgnoreInhibited=yes
-LidSwitchIgnoreInhibited=yes
+#PowerKeyIgnoreInhibited=no
+#SuspendKeyIgnoreInhibited=no
+#HibernateKeyIgnoreInhibited=no
+#LidSwitchIgnoreInhibited=yes
 #HoldoffTimeoutSec=30s
 #IdleAction=ignore
 #IdleActionSec=30min
@@ -34,4 +35,3 @@ LidSwitchIgnoreInhibited=yes
 #RemoveIPC=yes
 #InhibitorsMax=8192
 #SessionsMax=8192
-#UserTasksMax=33%
