--- a/h2o/h2o.conf
+++ b/h2o/h2o.conf
@@ -5,7 +5,7 @@ listen:
   port: 443
   ssl:
     min-version: TLSv1.2
-    cipher-suite: "ECDHE:!CAMELLIA:!AES256"
+    cipher-suite: "ECDHE:!CAMELLIA:!ARIA:!AES256"
     key-file: /srv/certs/www.chabu.jp.key
     certificate-file: /srv/certs/www.chabu.jp.crt
     ocsp-update-interval: 43200
