--- a/boot/syslinux.cfg
+++ b/boot/syslinux.cfg
@@ -1,4 +1,3 @@
-
 SERIAL 0 115200
 
 DEFAULT arch
@@ -7,5 +6,5 @@ PROMPT 0
 LABEL arch
     MENU LABEL Arch Linux
     LINUX ../vmlinuz-linux
-    APPEND root=UUID=00000000-0000-0000-0000-000000000000 rw console=tty1 console=ttyS0,115200n8 quiet
+    APPEND root=LABEL=root rw console=tty1 console=ttyS0,115200n8 net.ifnames=0 quiet
     INITRD ../initramfs-linux.img
